Merge of change 14484 from 3.2 branch.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@14485 7fc7bbf3-cf45-46d4-be06-341739edd864