@@ -19,22 +19,20 @@ fi
 
 root=`dirname $0`/..
 root=`cd $root && pwd`
+
 jetty_work_dir=$root/jetty6.1/$jetty_instance
-install_root=$root/../..
-jetty_home=$install_root/vendors/jetty-6.1.15
+jetty_home=$root/../../vendors/jetty-6.1.15
 start_jar=$jetty_home/start.jar
 stop_port=$((jetty_instance + 2))
 
 cd $jetty_work_dir
 if $cygwin; then
-  install_root=`cygpath -w $install_root`
   jetty_work_dir=`cygpath -w $jetty_work_dir`
   jetty_home=`cygpath -w $jetty_home`
   start_jar=`cygpath -w $start_jar`
 fi
 
-echo "starting Jetty $jetty_instance..."
-$JAVA_HOME/bin/java -Dtc.install-root=$install_root -Xmx256m -XX:MaxPermSize=128m -Djetty.home=$jetty_home -DSTOP.PORT=$stop_port\
- -DSTOP.KEY=secret -jar $start_jar conf.xml &
-sleep 1
-echo
+echo "Stopping Jetty $jetty_instance..."
+$JAVA_HOME/bin/java -Djetty.home=$jetty_home -DSTOP.PORT=$stop_port -DSTOP.KEY=secret\
+ -jar $start_jar --stop
+
